don't upload git objects

--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -2,14 +2,14 @@
 
 name: Upload
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
+  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -25,7 +25,11 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: entire-directory
-          path: .
-  
+          name: everything-but-git
+          path: |
+            .
+            !.git/
+
+
+
 
