--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -25,10 +25,11 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: everything-but-git
+          name: everything-but-git+hub
           path: |
             .
             !.git/
+            !.github/
 
 
 
